--- a/ChatWorkQuickInfoInput/manifest.json
+++ b/ChatWorkQuickInfoInput/manifest.json
@@ -1,8 +1,8 @@
 {
     "name": "ChatWork Quick Info Input",
-    "version": "1.1",
+    "version": "1.2",
     "manifest_version": 2,
-    "description": "ChatWorkの[info]を早く入力する拡張機能",
+    "description": "ChatWorkの[info][/info]を素早く入力する拡張機能",
     "content_security_policy": "script-src 'self'; object-src 'self'",
     "icons": {
         "16" : "images/icon_16.png",
