--- a/package.json
+++ b/package.json
@@ -7,6 +7,6 @@
     "build": "webextension-toolbox build"
   },
   "devDependencies": {
-    "webextension-toolbox": "latest"
+    "@webextension-toolbox/webextension-toolbox": "^6.1.0"
   }
 }
