--- a/app/manifest.json
+++ b/app/manifest.json
@@ -2,10 +2,12 @@
   "name": "__MSG_appName__",
   "short_name": "__MSG_appShortName__",
   "description": "__MSG_appDescription__",
-  "version": "3.0.7",
-  "manifest_version": 2,
+  "version": "3.0.8",
+  "manifest_version": 3,
   "default_locale": "ja",
-  "content_security_policy": "script-src 'self'; object-src 'self'",
+  "content_security_policy": {
+      "extension_pages": "script-src 'self'; object-src 'self'"
+  },
   "icons": {
     "16" : "images/icon_16.png",
     "48" : "images/icon_48.png",
